Added Register and Login for company
